--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,8 @@
 baseURL = "/"
 languageCode = "en-us"
 title = "Nik's Data Blog"
-theme="m10c"
+
+theme="hugo-theme-m10c"
 
 [params]
   author = "Nik Seldon"
